# claude-subscription-proxy

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docker/: config.example.yaml  entrypoint.sh
src/: account_quota.py  auth.py  config.py  main.py  oauth_login.py  oauth_refresh.py  pty_driver.py  quota_probe.py  rate_limit.py  usage.py  worker.py
src/api/: admin.py  anthropic.py  openai.py  translate.py  ui.py
src/mitm/: addon.py  runner.py
src/session/: manager.py  session.py  state.py
src/static/: admin.html
tests/: probe_workers.py  smoke_serve.sh  test_api_e2e.py  test_config.py  test_merge.py  test_rate_limit.py  test_sse_filter.py  test_translate.py
