[project]
name = "claude-cli-proxy"
version = "0.1.0"
description = "Expose claude code subscription as OpenAI/Anthropic-compatible API via mitmproxy hijacking"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mitmproxy>=11.0",
    "ptyprocess>=0.7",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
